--- a/index.html
+++ b/index.html
@@ -1,183 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,
-    initial-scale=1.0">
-    <title>Willpine - Gallery</title>
-    <link href="home.css" rel="stylesheet">
-    <link href="gallery.css" rel="stylesheet">
-    <link href="writtings.css" rel="stylesheet" />
-    <link href="about.css" rel="stylesheet" />
-    <link href="resources/lightbox2-2.11.1/src/css/lightbox.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/global_layout.css">
+    <link rel="stylesheet" href="css/gallery.css">
+    <title>Pinefolio</title>
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navbar" class="sticky">
-        <a href=#homeSection>Home</a>
-        <a href="#gallerySection">Gallery</a>
-        <a href="#writtingsSection">Writtings</a>
-        <a href="#aboutSection">About</a>
-    </div>
+    <header>
+        <h1>Willpine</h1>
+        <nav>
+            <a href="#gallery_section">Gallery</a>
+            <a href="#entries_section">Entries</a>
+            <a href="#about_section">About</a>
+        </nav>
+        <p>Some social networks</p>
+    </header>
+    <main>
+        <div id="global_grid">
+            <section id="gallery_section">
+                <a href="resources/art/World 1.png" data-lightbox="image-1" data-title="World 1">
+                    <img src="resources/art/World 1Thumb.png"></a>
+                <a href="resources/art/Heir.png" data-lightbox="image-1" data-title="Heir">
+                    <img src="resources/art/HeirThumb.png"></a>
+                <a href="resources/art/Agony.png" data-lightbox="image-1" data-title="Agony">
+                    <img src="resources/art/AgonyThumb.png"></a>
+                <a href="resources/art/BattlePosition.png" data-lightbox="image-1" data-title="Battle Position">
+                    <img src="resources/art/BattlePositionThumb.png"></a>
 
-    <section id="homeSection">
-        <header>
-            <i>
-                <h1 class="titleName">Will Pine</h1>
-            </i>
-
-            <h3 class="intro">Introduction goes here</h3>
-        </header>
-        <div class="homeContainer">
-            <div class="homeContainer2">
-
-                <div class="child1">
-                    <a href=#gallerySection class="child1">
-                        <div class="link">
-                            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                            <p>Gallery</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="child2">
-                    <a href=#writtingsSection class="child1">
-                        <div class="link">
-                            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                            <p>Writtings</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="child3">
-                    <a href=#aboutSection class="child1">
-                        <div class="link">
-                            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                            <p>About</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--The gallery Section-->
-    <section id="gallerySection" class="galleryClass">
-        <!--Título da página-->
-        <div class="TítuloG">
-            <h1>Gallery</h1>
-        </div>
-
-        <!--Imagens-->
-        <div class="images">
-            <div class="inDiv">
-                <a href="drawings/World 1.png" data-lightbox="image-1" data-title="World 1">
-                    <img src="drawings/World 1Thumb.png"></a>
-                <a href="drawings/Heir.png" data-lightbox="image-1" data-title="Heir">
-                    <img src="drawings/HeirThumb.png"></a>
-                <a href="drawings/Agony.png" data-lightbox="image-1" data-title="Agony">
-                    <img src="drawings/AgonyThumb.png"></a>
-                <a href="drawings/BattlePosition.png" data-lightbox="image-1" data-title="Battle Position">
-                    <img src="drawings/BattlePositionThumb.png"></a>
-
-                <a href="drawings/Happy new year.png" data-lightbox="image-1" data-title="Happy new year">
-                    <img src="drawings/Happy new yearThumb.png"></a>
-                <a href="drawings/Ocean Eyes.png" data-lightbox="image-1" data-title="Ocean Eyes">
-                    <img src="drawings/Ocean EyesThumb.png"></a>
-                <a href="drawings/Samurai.png" data-lightbox="image-1" data-title="Samurai">
-                    <img src="drawings/SamuraiThumb.png"></a>
-                <a href="drawings/Smile like you mean it.png" data-lightbox="image-1"
+                <a href="resources/art/Happy new year.png" data-lightbox="image-1" data-title="Happy new year">
+                    <img src="resources/art/Happy new yearThumb.png"></a>
+                <a href="resources/art/Ocean Eyes.png" data-lightbox="image-1" data-title="Ocean Eyes">
+                    <img src="resources/art/Ocean EyesThumb.png"></a>
+                <a href="resources/art/Samurai.png" data-lightbox="image-1" data-title="Samurai">
+                    <img src="resources/art/SamuraiThumb.png"></a>
+                <a href="resources/art/Smile like you mean it.png" data-lightbox="image-1"
                     data-title="Smile like you mean it">
-                    <img src="drawings/Smile like you mean itThumb.png"></a>
+                    <img src="resources/art/Smile like you mean itThumb.png"></a>
 
-                <a href="drawings/Stranded Jeremy.png" data-lightbox="image-1" data-title="Stranded Jeremy">
-                    <img src="drawings/Stranded JeremyThumb.png"></a>
-
-
-                <a href="drawings/Anna Sleeping.png" data-lightbox="image-1" data-title="Anna Awakens">
-                    <img src="drawings/Anna SleepingThumb.png"></a>
-                <a href="drawings/Anna.png" data-lightbox="image-1" data-title="Anna">
-                    <img src="drawings/AnnaThumb.png"></a>
-                <a href="drawings/Auto Pilot.png" data-lightbox="image-1" data-title="Auto Pilot">
-                    <img src="drawings/Auto PilotThumb.png"></a>
-                <a href="drawings/Transplarent.png" data-lightbox="image-1" data-title="Transplarent">
-                    <img src="drawings/TransplarentThumb.png"></a>
-                <a href="drawings/White_Runner.png" data-lightbox="image-1" data-title="White_Runner">
-                    <img src="drawings/White_RunnerThumb.png"></a>
-                <a href="drawings/GFace.png" data-lightbox="image-1" data-title="GFace">
-                    <img src="drawings/GFaceThumb.png"></a>
+                <a href="resources/art/Stranded Jeremy.png" data-lightbox="image-1" data-title="Stranded Jeremy">
+                    <img src="resources/art/Stranded JeremyThumb.png"></a>
 
 
-                <a href="drawings/BokunoWallpaper.png" data-lightbox="image-1" data-title="BokunoWallpaper">
-                    <img src="drawings/BokunoWallpaperThumb.png"></a>
-                <a href="drawings/Buttons.png" data-lightbox="image-1" data-title="Buttons">
-                    <img src="drawings/ButtonsThumb.png"></a>
-                <a href="drawings/Dropping rose.png" data-lightbox="image-1" data-title="Dropping rose">
-                    <img src="drawings/Dropping roseThumb.png"></a>
+                <a href="resources/art/Anna Sleeping.png" data-lightbox="image-1" data-title="Anna Awakens">
+                    <img src="resources/art/Anna SleepingThumb.png"></a>
+                <a href="resources/art/Anna.png" data-lightbox="image-1" data-title="Anna">
+                    <img src="resources/art/AnnaThumb.png"></a>
+                <a href="resources/art/Auto Pilot.png" data-lightbox="image-1" data-title="Auto Pilot">
+                    <img src="resources/art/Auto PilotThumb.png"></a>
+                <a href="resources/art/Transplarent.png" data-lightbox="image-1" data-title="Transplarent">
+                    <img src="resources/art/TransplarentThumb.png"></a>
+                <a href="resources/art/White_Runner.png" data-lightbox="image-1" data-title="White_Runner">
+                    <img src="resources/art/White_RunnerThumb.png"></a>
+                <a href="resources/art/GFace.png" data-lightbox="image-1" data-title="GFace">
+                    <img src="resources/art/GFaceThumb.png"></a>
 
 
-                <a href="drawings/Jetpack.png" data-lightbox="image-1" data-title=Jetpack">
-                    <img src="drawings/JetpackThumb.png"></a>
-                <a href="drawings/Sora.png" data-lightbox="image-1" data-title="Sora">
-                    <img src="drawings/SoraThumb.png"></a>
-                <a href="drawings/Hers01.png" data-lightbox="image-1" data-title="Hers01">
-                    <img src="drawings/Hers01Thumb.png"></a>
+                <a href="resources/art/BokunoWallpaper.png" data-lightbox="image-1" data-title="BokunoWallpaper">
+                    <img src="resources/art/BokunoWallpaperThumb.png"></a>
+                <a href="resources/art/Buttons.png" data-lightbox="image-1" data-title="Buttons">
+                    <img src="resources/art/ButtonsThumb.png"></a>
+                <a href="resources/art/Dropping rose.png" data-lightbox="image-1" data-title="Dropping rose">
+                    <img src="resources/art/Dropping roseThumb.png"></a>
 
 
-                <a href="drawings/Cyberpunk revolution.png" data-lightbox="image-1" data-title="Cyberpunk revolution">
-                    <img src="drawings/Cyberpunk revolutionThumb.png"></a>
-                <a href="drawings/Wiu.png" data-lightbox="image-1" data-title="Wiu">
-                    <img src="drawings/WiuThumb.png"></a>
-                <a href="drawings/Lollita.png" data-lightbox="image-1" data-title="Lollita">
-                    <img src="drawings/LollitaThumb.png"></a>
-            </div>
+                <a href="resources/art/Jetpack.png" data-lightbox="image-1" data-title=Jetpack">
+                    <img src="resources/art/JetpackThumb.png"></a>
+                <a href="resources/art/Sora.png" data-lightbox="image-1" data-title="Sora">
+                    <img src="resources/art/SoraThumb.png"></a>
+                <a href="resources/art/Hers01.png" data-lightbox="image-1" data-title="Hers01">
+                    <img src="resources/art/Hers01Thumb.png"></a>
+
+
+                <a href="resources/art/Cyberpunk revolution.png" data-lightbox="image-1"
+                    data-title="Cyberpunk revolution">
+                    <img src="resources/art/Cyberpunk revolutionThumb.png"></a>
+                <a href="resources/art/Wiu.png" data-lightbox="image-1" data-title="Wiu">
+                    <img src="resources/art/WiuThumb.png"></a>
+                <a href="resources/art/Lollita.png" data-lightbox="image-1" data-title="Lollita">
+                    <img src="resources/art/LollitaThumb.png"></a>
+            </section>
+            <section id="entries_section">
+            </section>
+            <section id="about_section">
+
+            </section>
         </div>
-    </section>
-    <!--The Writtings Section-->
-    <section id="writtingsSection">
-
-        <div class="divWrittings">
-
-            <div class="TítuloW">
-                <h1>Writtings</h1>
-            </div>
-
-            <div class="containerWrittings">
-                <div class="item">Lovecraft Maybe</div>
-                <div class="item">Gurren Lagann Maybe</div>
-                <div class="item">Drawing Maybe</div>
-            </div>
-
-
-        </div>
-    </section>
-
-    <!--The about me Section-->
-    <section id="aboutSection">
-
-
-        <div class="TítuloA">
-            <h1>About</h1>
-        </div>
-        <div class="divAbout" id="divAboutId">
-
-        </div>
-    </section>
-
-    <script src="resources/lightbox2-2.11.1/dist/js/lightbox-plus-jquery.js"></script>
-    <!--<script>
-        window.onscroll = function () { myFunction() };
-
-        var navbar = document.getElementById("navbar");
-        var sticky = navbar.offsetTop;
-
-        function myFunction() {
-            if (window.pageYOffset >= sticky) {
-                navbar.classList.add("sticky")
-            } else {
-                navbar.classList.remove("sticky");
-            }
-        }
-    </script>-->
+    </main>
+    <footer></footer>
 </body>
 
 </html>
